@@ -1,0 +1,14 @@
+{
+  lib,
+  config,
+  ...
+}:
+let
+  inherit (lib) mkIf;
+  cfg = config.programs.remmina;
+in
+{
+  config = mkIf cfg.enable {
+    environment.systemPackages = [ cfg.package ];
+  };
+}
